# spatial_training_2

./: .gitignore  .gitmodules  016env.txt  README.md  ablation.bash  adv_theory.ipynb  analysis.ipynb  case_study.ipynb  client.py  config_schema.py  constants.py  data  env.yaml  hab_smoke.ipynb  hydra_main.py  inference_main.py  oracle_durations_sample400.json  profile_2.pickle  pyproject.toml  raymain.py  remote.ipynb  results_1635322  results_2102868  rl_eval.py  save_video.ipynb  server.py  test_model.ipynb  test_rl.py  test_rl_rollout.py  test_worker.ipynb  time_habitat.py
D7N2EKCX4Sj/D7N2EKCX4Sj_1943.1635322@1768965848.473979/: sequence.json  summary.json
conf/: register_configs.py
conf/ablation/: Untitled  domain_rand.yaml  eval_goldeen_hm3d.yaml  eval_ovon.yaml  hm3d_1_all.yaml  hm3d_1_gamma_90.yaml  hm3d_1_gamma_97.yaml  hm3d_1_sigma_10.yaml  hm3d_1_sigma_50.yaml  hm3d_2_all.yaml  hm3d_rpp_ke.yaml  mp3d_all.yaml  ovon_continue.yaml  pruning.txt  sample400.yaml
data_scripts/: build_pose_dataset.py
misc/: ablation_analysis.ipynb  adv_diagram copy.ipynb  adv_diagram.ipynb  adv_test.ipynb  distance_analysis.ipynb  perf.ipynb  project_runs_summary.csv  qwen_editing.ipynb
tests/: eval_smoke.py  rl_smoke.py
tools/: client.py  upload_rl_ckpt.py
training_scripts/: pretrain_critic.py  train_dagger.py  train_dagrl.py  train_rl.py  train_rl_grpo.py  train_sft_sparse.py
utils/: bev_utils.py  factories.py  habitat_worker.py  inference_core.py  logging_workers.py  modeling.py  prompt_utils.py  rl_core.py  tensor_utils.py  trainers.py  vlm_worker.py
(+128 files in other folders)
